# sinkingfund

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: api_reference.rst  conf.py  examples.rst  index.rst  installation.rst  testing.rst  user_guide.rst  utils_architecture.md
docs/api/: allocation.rst  managers.rst  models.rst  schedules.rst  utils.rst
examples/: account_projections.ipynb  allocate_balances.ipynb  independent_scheduler.ipynb  load_bills.ipynb  load_envelopes.ipynb  sinkingfund.ipynb  sorted_allocation.ipynb
examples/data/: schwab_fund.csv
sinkingfund/: __init__.py
sinkingfund/allocation/: __init__.py  base.py  proportional.py  sorted.py
sinkingfund/managers/: __init__.py  allocation_manager.py  bill_manager.py  envelope_manager.py  schedule_manager.py
sinkingfund/models/: __init__.py  account.py  bills.py  cash_flow.py  envelope.py  sinking_fund.py  sinkingfund.py
sinkingfund/schedules/: __init__.py  base.py  indep_scheduler.py  lp_scheduler.py  smoothed_scheduler.py
sinkingfund/utils/: __init__.py  date_utils.py  file_utils.py  format_registry.py  loader.py  loaders.py  readers.py
tests/: conftest.py
tests/integration/: __init__.py  test_basic_workflow.py
tests/unit/models/: __init__.py  test_bills.py  test_cash_flow.py  test_envelope.py  test_sinkingfund.py
tests/unit/utils/: __init__.py  test_date_utils.py  test_file_utils.py  test_format_registry.py  test_loaders.py  test_readers.py
