[tool.poetry]
name = "sinkingfund"
version = "0.1.0"
description = "A library for producing contributions towards bills using a sinking fund."
authors = ["Greg Barbieri <gfbarbieri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pulp = "^3.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
